--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "BellsBreads",
-  "name": "BellsBreads",
+  "short_name": "AstroMovies",
+  "name": "AstroMovies",
   "icons": [
     {
       "src": "favicon.ico",
