--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "moviedownloadlinks",
-  "name": "moviedownloadlinks",
+  "short_name": "movieseriesdownload",
+  "name": "movieseriesdownload",
   "icons": [
     {
       "src": "favicon.ico",
